--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,8 +5,8 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.PlaceholderFragment">
-
+    >
+<!--    tools:context=".ui.main.PlaceholderFragment"-->
     <TextView
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
