--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -50,7 +50,8 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginEnd="15dp"
                 android:layout_marginBottom="14dp"
-                android:text="заказать" />
+                android:text="заказать"
+                android:id="@+id/order"/>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
