немного порефакторен код
Signed-off-by: SofiaFish <[soniarozhko@gmail.com]>

--- a/app/src/main/res/layout/pizza_dialog.xml
+++ b/app/src/main/res/layout/pizza_dialog.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/nameofpizza"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -16,14 +16,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/ingridientsofpizza"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="ingridients"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/nameofpizza" />
 
     <TextView
         android:id="@+id/textView3"
@@ -33,7 +33,7 @@
         android:layout_marginTop="16dp"
         android:text="Размер"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/ingridientsofpizza" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
@@ -70,7 +70,7 @@
         android:layout_marginTop="16dp"
         android:text="Бортики"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/ingridientsofpizza" />
 
     <RadioGroup
         android:id="@+id/radioGroup2"
