--- a/app/src/main/res/layout/stocks_fragment.xml
+++ b/app/src/main/res/layout/stocks_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pizzadelivery.Fragments.StocksFragment">
+    tools:context="com.example.pizzadelivery.fragments.StocksFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
