--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,6 +4,12 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
+    <item>
+        <shape>
+            <solid android:color="@color/lightGray" />
+            <corners android:radius="5dp" />
+        </shape>
+    </item>
     <path
         android:fillColor="#008577"
         android:pathData="M0,0h108v108h-108z" />
