--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/pizza_components"
-                android:text="*указывать при звонке"
+                android:text="*уточнять у оператора"
                 android:textColor="#000"
                 android:textSize="25sp" />
 
